--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_my_account_actitvity">MyAccountActitvity</string>
+    <string name="title_activity_contact_us">ContactUsActivity</string>
+    <string name="title_activity_about_us">AboutUsActivity</string>
+    <string name="title_activity_my_accounts">MyAccountsActivity</string>
 </resources>
