--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="title_activity_contact_us">ContactUsActivity</string>
     <string name="title_activity_about_us">AboutUsActivity</string>
     <string name="title_activity_my_accounts">MyAccountsActivity</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_register">RegisterActivity</string>
 </resources>
