web request, parsing, iamge downloading, product enquiry

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="title_activity_product_detail">ProductDetailActivity</string>
     <string name="title_activity_cart">CartActivity</string>
     <string name="title_activity_checkout">CheckoutActivity</string>
+    <string name="title_activity_search">SearchActivity</string>
+    <string name="title_activity_product_enquiry">ProductEnquiryActivity</string>
 </resources>
