--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="title_activity_checkout">CheckoutActivity</string>
     <string name="title_activity_search">SearchActivity</string>
     <string name="title_activity_product_enquiry">ProductEnquiryActivity</string>
+    <string name="title_activity_splash_screen">ShoppingAdviser</string>
 </resources>
