--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="title_activity_search">SearchActivity</string>
     <string name="title_activity_product_enquiry">ProductEnquiryActivity</string>
     <string name="title_activity_splash_screen">ShoppingAdviser</string>
+    <string name="search_title">Search</string>
 </resources>
