search, grid image caching

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="title_activity_product_enquiry">ProductEnquiryActivity</string>
     <string name="title_activity_splash_screen">ShoppingAdviser</string>
     <string name="search_title">Search</string>
+    <string name="sample_checksum_generation_url">https://pguat.paytm.com/merchant-chksum/ChecksumGenerator</string>
+    <string name="sample_checksum_verification_url">https://pguat.paytm.com/merchant-chksum/ValidateChksum</string>
 </resources>
