--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,20 +5,22 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="title_activity_my_account_actitvity">MyAccountActitvity</string>
-    <string name="title_activity_contact_us">ContactUsActivity</string>
-    <string name="title_activity_about_us">AboutUsActivity</string>
-    <string name="title_activity_my_accounts">MyAccountsActivity</string>
-    <string name="title_activity_login">LoginActivity</string>
-    <string name="title_activity_register">RegisterActivity</string>
-    <string name="title_activity_product_detail">ProductDetailActivity</string>
-    <string name="title_activity_cart">CartActivity</string>
-    <string name="title_activity_checkout">CheckoutActivity</string>
-    <string name="title_activity_search">SearchActivity</string>
-    <string name="title_activity_product_enquiry">ProductEnquiryActivity</string>
-    <string name="title_activity_splash_screen">ShoppingAdviser</string>
+    <string name="title_activity_my_account_actitvity">My Account</string>
+    <string name="title_activity_contact_us">Contact Us</string>
+    <string name="title_activity_about_us">About Us</string>
+    <string name="title_activity_my_accounts">MyAccounts</string>
+    <string name="title_activity_login">Login</string>
+    <string name="title_activity_register">Register</string>
+    <string name="title_activity_product_detail">Product Detail</string>
+    <string name="title_activity_cart">My Cart</string>
+    <string name="title_activity_checkout">Checkout</string>
+    <string name="title_activity_search">Search</string>
+    <string name="title_activity_product_enquiry">Product Enquiry</string>
+    <string name="title_activity_splash_screen">Shopping Adviser</string>
     <string name="search_title">Search</string>
     <string name="sample_checksum_generation_url">https://pguat.paytm.com/merchant-chksum/ChecksumGenerator</string>
     <string name="sample_checksum_verification_url">https://pguat.paytm.com/merchant-chksum/ValidateChksum</string>
-    <string name="title_activity_shopping_cart">ShoppingCartActivity</string>
+    <string name="title_activity_shopping_cart">Shopping Cart</string>
+    <string name="title_myorder">My Order</string>
+
 </resources>
